# Merchant

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/templates/: index.html  layout.html  stock_detail.html  strategy.html
docs/: infra.md
notebooks/: simple_trading_rule.ipynb
scripts/: create_db.py  docstring.sh  drop_db.py  format.sh  lint.sh  populate_stocks.py
src/merchant/: __init__.py  cli.py  config.py  database.py  main.py  merchant.py  readme.md
tests/: test_merchant.py
